--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tailwindcss/forms": "^0.5.10",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "resend": "^4.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
